--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ouioui</title>
+    <title>About Me ouioui</title>
  </head>
  <body>
     <h1>Zi Yang Fan -- About Me</h1>
@@ -10,14 +10,9 @@
         <h2>Introduction</h2>
         <p>I am a sophomore. 
         <p>I like the color green and I enjoy playing badminton. </p>
-
-            I don't like it when dust gets in my eyes or nose.
-
-        </p>
-
-            <p>I'd like to own a dog someday.</p>
+        <p>I don't like it when dust gets in my eyes or nose.</p>
+        <p>I'd like to own a dog someday.</p>
         </section>
-    </section>
     <ol>
         <li><a href="https://www.vox.com/">Favorite News Thingy</a></li>
         <li><a href="https://weather.com/">Weather App that I look at once a Year</a></li>
