--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me ouioui</title>
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
     <h1>Zi Yang Fan -- About Me</h1>
     <section>
         <h2>Introduction</h2>
-        <p>I am a sophomore. 
-        <p>I like the color green and I enjoy playing badminton. </p>
-        <p>I don't like it when dust gets in my eyes or nose.</p>
-        <p>I'd like to own a dog someday.</p>
+        <p class="intro">I am a sophomore. I like the color green and I enjoy playing badminton. I don't like it when dust gets in my eyes or nose. I'd like to own a dog someday. I'm desperate to learn to code, but I'm poopy at it. I need step by step instructions like a kindergartener. Shoutout to everyone that asks questions, you're my hero !!</p>
         </section>
     <ol>
         <li><a href="https://www.vox.com/">Favorite News Thingy</a></li>
@@ -22,6 +20,12 @@
         <ul>
             <li><a href="//www.instagram.com/">I have Instagram</a></li>
         </ul>
+    <div class="bucket">
+        <h2>HAHAHHAHAHAH</h2>
+        <h3>!!</h3>
+    </div>
+    <img src="mememmemememme.gif" alt="">
+
     </section>
  </body>
 </html>
