--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <h1>Zi Yang Fan -- About Me</h1>
     <section>
         <h2>Introduction</h2>
-        <p class="intro">I am a sophomore. I like the color green and I enjoy playing badminton. I don't like it when dust gets in my eyes or nose. I'd like to own a dog someday. I'm desperate to learn to code, but I'm poopy at it. I need step by step instructions like a kindergartener. Shoutout to everyone that asks questions, you're my hero !!</p>
+        <p class="intro">I am a sophomore. I like the color green and I enjoy playing badminton. I don't like it when dust gets in my eyes or nose. I'd like to own a dog someday. I want to learn to code and I like it, but I'm poopy at it !!</p>
+        </section>
+        <section>
+            <h3>Songs that I think are pretty cool</h3>
+            <li>bounce - kyra</li>
+            <li>paris - caro emerald</li>
+            <li>lotus - osvaldorio</li>
+            <li>mine - bazzi</li>
+            <li>reverse - CORSAK</li>
         </section>
     <ol>
         <li><a href="https://www.vox.com/">Favorite News Thingy</a></li>
@@ -19,13 +27,14 @@
         <h2>Socials</h2>
         <ul>
             <li><a href="//www.instagram.com/">I have Instagram</a></li>
+            <li><a href="//www.discord.com/">I also have Discord</a></li>
         </ul>
     <div class="bucket">
-        <h2>HAHAHHAHAHAH</h2>
-        <h3>!!</h3>
+        <h4>HAHAHHAHAHAH</h4>
+        <h5>!!</h5>
     </div>
-    <img src="mememmemememme.gif" alt="">
-
     </section>
  </body>
+    <p>School appropriate Meme:</p>
+    <img src="https://i.redd.it/pgmag834r3p51.png" alt="AAAAS">
 </html>
